# nix-config

./: .gitignore  README.md  TODOs  configuration.nix  default_env_vars.sh  dependencies.py  environment_vars.sh  flake.nix  install_dependencies.sh  install_dotfiles.bash  install_dotfiles.py  justfile  move_dotfiles.py  notes.md  typescript
.config/: compton.conf  custom_run_i3lock_color.sh
.config/awesome/: rc-xfce.lua  rc.lua
builds/i3lock/: build_i3lock.sh
builds/nautilus-terminal/: build_nautilus_terminal.sh
distrobox-envs/: distrobox.ini  docker-compose.yml
distrobox-envs/ubuntu-python/: Dockerfile
distrobox-envs/ubuntu-python/tests/: library_tests.py  pyproject.toml  run_tests.py
hardware/dell-xps-15/: default.nix  nvidia-docker.nix  nvidia.nix  zsa-moonlander.nix
helpful/: daemon.json  disable-hotbar-super-keys.txt  docker-cache-separate-drive.md  grub_defaults.md  grub_theme.md  keyboard-shortcuts.md  login-monitors.md  pop-shell.md  surface_book_dgpu.txt
helpful/scripts/: .bashrc-addon.sh  disable-hotbar-super-keys.sh
i3lock/: build_i3lock.sh
non-nix/: .dconf-backup.ini  README.md  dconf_gnome_settings.conf  dconf_paperwm_settings.conf  dconf_switcher_settings.conf  install-apt-deps.sh  install.sh
patches/: chrome-remote-desktop.patch
scripts/: rescan_audio_devices.sh  start_awesome_xfce.bash
systems/personal/: default.nix  (+1 more)
tools/: pyproject.toml  setup.py
tools/tools/: __init__.py  file_explorer.py  git_branch_diff.py  git_gc.py  make_llm_context.py  split_screen.py  unix_scripts.py
tools/tools/tdirstat/: crawler.py  main.py
(+21 files in other folders)
