[tool.poetry]
name = "tools"
version = "0.1.0"
description = "A random set of commandline tools for my personal use"
authors = ["Alex Thiel <apocthiel@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
axls = 'tools:ls'
axexplore = 'tools:file_explorer'
axgitgc = 'tools:git_gc'
axgitbranchdiff = 'tools:git_branch_diff'
axmkllmcontext = 'tools:make_llm_context'

[tool.poetry.dependencies]
python = "^3.6"
asciimatics = "^1.12.0"
colorful = "^0.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
